updated html file
Adding comments and changing the social media footer area

--- a/template-html.html
+++ b/template-html.html
@@ -9,6 +9,7 @@
     <meta name="description" content="this is a template html index file">
     <meta name="keywords" content="place your keywords in here">
 
+    <!-- Choose between two grids or add your own styling -->
     <link rel="stylesheet" href="template-css-v1.css">
     <!-- <link rel="stylesheet" href="template-css-v2.css"> -->
 
@@ -57,7 +58,7 @@
     <footer role="contentinfo" id="footer" class="grid-footer template-style">
         <nav role="navigation">
             <ul>
-                <h2>copyrigth</h2>
+                <h2>copyright</h2>
                 <li><a href="#">item 1</a></li>
                 <li><a href="#">item 2</a></li>
                 <li><a href="#">item 3</a></li>
@@ -66,7 +67,7 @@
 
         <nav role="navigation">
             <ul>
-                <h2>social</h2>
+                <h2>social-media</h2>
                 <li><a href="#">item 1</a></li>
                 <li><a href="#">item 2</a></li>
                 <li><a href="#">item 3</a></li>
